--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+joblib==1.2.0
 kaggle==1.5.12
 numpy==1.24.1
 pandas==1.5.2
 python-slugify==7.0.0
 pytz==2022.7
+scikit-learn==1.2.0
+scipy==1.10.0
 text-unidecode==1.3
+threadpoolctl==3.1.0
 tqdm==4.64.1
