--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+ipywidgets==8.0.4
 joblib==1.2.0
+jupyterlab-widgets==3.0.5
 kaggle==1.5.12
 numpy==1.24.1
 pandas==1.5.2
@@ -9,3 +11,4 @@ scipy==1.10.0
 text-unidecode==1.3
 threadpoolctl==3.1.0
 tqdm==4.64.1
+widgetsnbextension==4.0.5
